--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,3 @@
-/*  your css code here. If applicable */
-body {
-  margin: 0;
-  height: 100vh;
-  background-color: white;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 #line {
   width: 200px;
   height: 2px;
@@ -16,5 +5,6 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform-origin: center center;
+  transform: translate(-50%, -50%);
+  transform-origin: center;
 }
